backend/logs/scan_c8f47383a5ae.log
[2026-03-16 04:32:56] [INFO    ] [scan.c8f47383a5ae] [Recon] Discovering subdomains for yovela-trading.com...
[2026-03-16 04:32:56] [INFO    ] [scan.c8f47383a5ae] [Recon] Starting subdomain discovery for yovela-trading.com
[2026-03-16 04:32:56] [INFO    ] [scan.c8f47383a5ae] [Recon] assetfinder OK (0.6s, 0 bytes)
[2026-03-16 04:33:16] [INFO    ] [scan.c8f47383a5ae] [Recon] subfinder OK (20.0s, 24 bytes)
[2026-03-16 04:33:16] [INFO    ] [scan.c8f47383a5ae] [Recon] Done: 1 from subfinder, 0 from assetfinder, 2 unique total.
[2026-03-16 04:33:16] [INFO    ] [scan.c8f47383a5ae] [Resolver] Resolving 2 hosts...
[2026-03-16 04:33:16] [INFO    ] [scan.c8f47383a5ae] [Resolver] Resolving 2 hosts via dnsx
[2026-03-16 04:33:16] [INFO    ] [scan.c8f47383a5ae] [Resolver] dnsx OK (0.3s, 2261 bytes)
[2026-03-16 04:33:16] [INFO    ] [scan.c8f47383a5ae] [Resolver] Resolved 2 hosts, 2 unique IPs
[2026-03-16 04:33:16] [INFO    ] [scan.c8f47383a5ae] [OriginIP] Detecting origin IPs / CDN bypass...
[2026-03-16 04:33:17] [INFO    ] [scan.c8f47383a5ae] [OriginIP] Probing origin IP for yovela-trading.com
[2026-03-16 04:33:22] [INFO    ] [scan.c8f47383a5ae] [OriginIP] Found 2 IPs total. CDN: [], Origin: ['104.21.29.108', '172.67.171.117']
[2026-03-16 04:33:22] [INFO    ] [scan.c8f47383a5ae] [PortScan] Scanning ports on 2 hosts...
[2026-03-16 04:33:22] [INFO    ] [scan.c8f47383a5ae] [PortScan] Scanning 2 hosts
[2026-03-16 04:33:24] [INFO    ] [scan.c8f47383a5ae] [PortScan] naabu OK (2.4s, 864 bytes)
[2026-03-16 04:33:24] [INFO    ] [scan.c8f47383a5ae] [PortScan] 4 open ports found across 2 hosts. Ports: [80, 443]
[2026-03-16 04:33:24] [INFO    ] [scan.c8f47383a5ae] [ServiceScan] Detecting services on 4 open ports...
[2026-03-16 04:33:25] [INFO    ] [scan.c8f47383a5ae] [ServiceScan] nmap on 2 target(s), 2 ports
[2026-03-16 04:33:51] [INFO    ] [scan.c8f47383a5ae] [ServiceScan] nmap OK (26.0s, 1406 bytes)
[2026-03-16 04:33:51] [INFO    ] [scan.c8f47383a5ae] [ServiceScan] Found 4 services, 0 OS matches
[2026-03-16 04:33:51] [INFO    ] [scan.c8f47383a5ae] [HTTPProbe] Probing HTTP/HTTPS endpoints...
[2026-03-16 04:33:51] [INFO    ] [scan.c8f47383a5ae] [HTTPProbe] Probing 4 URLs
[2026-03-16 04:33:51] [WARNING ] [scan.c8f47383a5ae] [HTTPProbe] httpx failed: Usage: httpx [OPTIONS] URL

Error: No such option: -l

[2026-03-16 04:33:51] [INFO    ] [scan.c8f47383a5ae] [HTTPProbe] 0 live hosts, tech: [], servers: []
[2026-03-16 04:33:51] [INFO    ] [scan.c8f47383a5ae] [VulnScan] Running vuln scan on 0 endpoints...
[2026-03-16 04:33:52] [INFO    ] [scan.c8f47383a5ae] [VulnScan] Starting Nuclei + Nikto in parallel
[2026-03-16 04:33:52] [INFO    ] [scan.c8f47383a5ae] [VulnScan] Primary URL: https://yovela-trading.com
[2026-03-16 04:33:52] [WARNING ] [scan.c8f47383a5ae] [VulnScan] nikto failed: + ERROR: Unable to open '' for write: 
1 at /var/lib/nikto/plugins/nikto_report_text.plugin line 41.

[2026-03-16 04:33:52] [WARNING ] [scan.c8f47383a5ae] [VulnScan] nuclei failed: 
[2026-03-16 04:33:52] [INFO    ] [scan.c8f47383a5ae] [VulnScan] Nuclei: 0 findings | Nikto: 0 findings
[2026-03-16 04:33:52] [INFO    ] [scan.c8f47383a5ae] [TLSScan] Analyzing TLS configuration for yovela-trading.com...
[2026-03-16 04:33:52] [INFO    ] [scan.c8f47383a5ae] [TLSScan] Analyzing TLS on yovela-trading.com:443
[2026-03-16 04:35:30] [INFO    ] [scan.c8f47383a5ae] [TLSScan] testssl.sh OK (97.5s, 27889 bytes)
[2026-03-16 04:35:30] [ERROR   ] [scan.c8f47383a5ae] Scan failed: 'list' object has no attribute 'get'
Traceback (most recent call last):
  File "/home/ubuntu/pentestbot_2/core/job_manager.py", line 328, in _execute
    await asyncio.wait_for(tls_scan.run(), timeout=self.config.scan.testssl_timeout)
  File "/usr/lib/python3.12/asyncio/tasks.py", line 520, in wait_for
    return await fut
           ^^^^^^^^^
  File "/home/ubuntu/pentestbot_2/pipeline/tls_scan.py", line 32, in run
    await self._run_testssl(tls_target)
  File "/home/ubuntu/pentestbot_2/pipeline/tls_scan.py", line 77, in _run_testssl
    self._parse_testssl_json(raw_json)
  File "/home/ubuntu/pentestbot_2/pipeline/tls_scan.py", line 85, in _parse_testssl_json
    scan_results = data.get("scanResult", [{}])
                   ^^^^^^^^
AttributeError: 'list' object has no attribute 'get'

[2026-03-16 04:35:30] [INFO    ] [scan.c8f47383a5ae] [Error] Scan failed: 'list' object has no attribute 'get'
